--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="splash_color">#5400FF</color>
+    <color name="black_color">#111111</color>
 </resources>
