--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,10 @@
         <item name="android:lineHeight" tools:targetApi="p">25dp</item>
     </style>
 
+    <style name="title_text">
+        <item name="fontFamily">@font/source_bold</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:textColor">@color/black_color</item>
+    </style>
+
 </resources>
