--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
     </style>
 
     <style name="title_text">
-        <item name="fontFamily">@font/source_bold</item>
+        <item name="fontFamily">@font/source_regular</item>
         <item name="android:textSize">35sp</item>
         <item name="android:textColor">@color/black_color</item>
     </style>
