--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
 
 
     <style name="splash_text">
-        <item name="fontFamily">@font/galada</item>
+        <item name="android:fontFamily">@font/galada</item>
         <item name="android:textSize">40sp</item>
         <item name="android:textColor">@color/splash_color</item>
         <item name="android:textAlignment">center</item>
@@ -16,9 +16,27 @@
     </style>
 
     <style name="title_text">
-        <item name="fontFamily">@font/source_regular</item>
+        <item name="android:fontFamily">@font/source_regular</item>
         <item name="android:textSize">35sp</item>
         <item name="android:textColor">@color/black_color</item>
+    </style>
+
+    <style name="normal_text">
+        <item name="android:fontFamily">@font/source_regular</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black_color</item>
+    </style>
+
+
+
+
+
+
+    <style name="login_button">
+        <item name="android:background">@drawable/button_background</item>
+        <item name="android:textColor">@color/white_color</item>
+        <item name="android:fontFamily">@font/source_regular</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
 </resources>
