--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="purple_color">#9764FF</color>
     <color name="splash_color">#5400FF</color>
     <color name="black_color">#111111</color>
+    <color name="white_color">#ffffff</color>
 </resources>
