--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Signup"
+        android:text="@string/signup_title_text"
 
         style="@style/title_text"
         android:layout_gravity="center_horizontal"
@@ -19,7 +19,7 @@
         />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_layout_login"
+        android:id="@+id/name_layout_signup"
         android:layout_width="match_parent"
         android:layout_height="60dp"
 
@@ -29,17 +29,17 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email_login"
+            android:id="@+id/name_signup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textEmailAddress"
+            android:inputType="text"
 
-            android:hint="@string/email_hint_login"
+            android:hint="@string/name_hint_signup"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_layout_login"
+        android:id="@+id/email_layout_signup"
         android:layout_width="match_parent"
         android:layout_height="60dp"
 
@@ -49,26 +49,36 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password_login"
+            android:id="@+id/email_signup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
 
-            android:hint="@string/password_hint_login"
+            android:hint="@string/email_hint_signup"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/forgot_password_link_login"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/password_layout_signup"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
 
-        android:layout_gravity="end"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginTop="20dp"
 
-        style="@style/normal_text"
-        />
+        app:passwordToggleEnabled="true"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/password_signup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPassword"
+
+            android:hint="@string/password_hint_signup"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:layout_width="match_parent"
@@ -77,14 +87,14 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginTop="20dp"
-        android:text="@string/login_button_text_login"
+        android:text="@string/signup_button_text_signup"
 
         style="@style/login_button"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/signup_link_login"
+        android:text="@string/login_link_signup"
 
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
