--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity"
     android:background="@mipmap/login_background">
 
     <TextView
@@ -81,6 +79,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:id="@+id/signup_button_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
@@ -92,6 +91,7 @@
         style="@style/login_button"/>
 
     <TextView
+        android:id="@+id/login_link_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_link_signup"
