--- a/app/src/main/res/layout/send_otp_activity.xml
+++ b/app/src/main/res/layout/send_otp_activity.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reset Password"
+        android:text="@string/reset_password_title_text"
 
         style="@style/title_text"
         android:layout_gravity="center_horizontal"
