--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="@color/black_color"
+    tools:targetApi="lollipop">
 
-    <solid android:color="@color/colorPrimary"/>
-    <corners android:radius="10dp"/>
-</shape>
+    <item>
+        <shape>
+            <solid android:color="@color/colorPrimary"/>
+            <corners android:radius="10dp"/>
+        </shape>
+    </item>
+</ripple>
