--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9764FF</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#9764FF</color>
+    <color name="colorPrimary">#4285F4</color>
+    <color name="colorPrimaryDark">#4285F4</color>
+    <color name="colorAccent">#4285F4</color>
 
-    <color name="purple_color">#9764FF</color>
-    <color name="splash_color">#5400FF</color>
+    <color name="blue_color">#4285F4</color>
+    <color name="splash_color">#4285F4</color>
+
     <color name="black_color">#111111</color>
     <color name="white_color">#ffffff</color>
 </resources>
