--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9764FF</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#9764FF</color>
+    <color name="colorPrimary">#3333FF</color>
+    <color name="colorPrimaryDark">#3333FF</color>
+    <color name="colorAccent">#3333FF</color>
 
     <color name="purple_color">#9764FF</color>
     <color name="splash_color">#5400FF</color>
