Notification, Fragment, MainActivity

--- a/app/src/main/res/layout/homescreen_fragment.xml
+++ b/app/src/main/res/layout/homescreen_fragment.xml
@@ -4,9 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:id="@+id/webview"/>
+
+    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+        android:id="@+id/webbu"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello"/>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
