--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,14 +14,20 @@
     </style>
 
     <style name="title_text">
-        <item name="android:fontFamily">@font/source_regular</item>
-        <item name="android:textSize">35sp</item>
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textSize">40sp</item>
         <item name="android:textColor">@color/black_color</item>
     </style>
 
     <style name="normal_text">
-        <item name="android:fontFamily">@font/source_regular</item>
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black_color</item>
+    </style>
+
+    <style name="normal_text_16">
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black_color</item>
     </style>
 
@@ -29,8 +35,8 @@
     <style name="login_button">
         <item name="android:background">@drawable/button_background</item>
         <item name="android:textColor">@color/white_color</item>
-        <item name="android:fontFamily">@font/source_regular</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
