--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,13 +20,13 @@
     </style>
 
     <style name="normal_text">
-        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/black_color</item>
     </style>
 
     <style name="normal_text_16">
-        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black_color</item>
     </style>
