--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -14,7 +14,7 @@
         android:text="@string/login_title_text"
 
         style="@style/title_text"
-        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="100dp"
         />
 
