--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -12,7 +12,7 @@
         android:text="@string/reset_password_title_text"
 
         style="@style/title_text"
-        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="100dp"
         />
 
