--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
 
     <color name="black_color">#111111</color>
     <color name="white_color">#ffffff</color>
+    <color name="offWhite_color">#EDEDED</color>
+
 </resources>
