--- a/app/src/main/res/layout/ngo_list_item_home.xml
+++ b/app/src/main/res/layout/ngo_list_item_home.xml
@@ -53,5 +53,17 @@
 
         android:text="Karan Raj"
         style="@style/normal_text"/>
+    <TextView
+        android:id="@+id/ngoCityTextView"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/ngoAddressTextView"
+
+        android:text="Karan Raj"
+        style="@style/normal_text"/>
 
 </RelativeLayout>
