--- a/app/src/main/res/menu/ngo_menu.xml
+++ b/app/src/main/res/menu/ngo_menu.xml
@@ -2,13 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home_menu_main"
+        android:id="@+id/home_menu_ngo"
         android:title="Home"
         android:icon="@drawable/home_menu_icon"
         />
     <item
-        android:id="@+id/account_menu_main"
+        android:id="@+id/account_menu_ngo"
         android:title="Account"
         android:icon="@drawable/account_menu_icon"
         />
+
 </menu>
