--- a/app/src/main/res/layout/donor_request_list_fragment.xml
+++ b/app/src/main/res/layout/donor_request_list_fragment.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ngo.DonorRequestList">
+    android:orientation="vertical"
+    tools:context=".donor.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="Pending Request"
+        style="@style/title_text"/>
 
-</FrameLayout>
+
+    <ListView
+        android:id="@+id/requestListView"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/normal_text"/>
+
+
+</LinearLayout>
