--- a/app/src/main/res/menu/ngo_menu.xml
+++ b/app/src/main/res/menu/ngo_menu.xml
@@ -7,6 +7,11 @@
         android:icon="@drawable/home_menu_icon"
         />
     <item
+        android:id="@+id/request_menu_ngo"
+        android:title="Requests"
+        android:icon="@drawable/ic_request"
+        />
+    <item
         android:id="@+id/account_menu_ngo"
         android:title="Account"
         android:icon="@drawable/account_menu_icon"
