--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="NGO"
+        android:text="NGO List"
         style="@style/title_text"/>
 
 
@@ -21,6 +21,7 @@
         android:layout_marginEnd="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:dividerHeight="1dp"
         style="@style/normal_text"/>
 
 
