--- a/app/src/main/res/layout/request_list_fragment_donor.xml
+++ b/app/src/main/res/layout/request_list_fragment_donor.xml
@@ -21,6 +21,7 @@
         android:layout_marginEnd="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:dividerHeight="2dp"
         style="@style/normal_text"/>
 
 
