--- a/app/src/main/res/layout/gallery_activity.xml
+++ b/app/src/main/res/layout/gallery_activity.xml
@@ -11,12 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="NGO List"
+        android:text="Gallery"
         style="@style/title_text"/>
 
 
     <ListView
-        android:id="@+id/ngoListView"
+        android:id="@+id/gallryListView"
         android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
